<resources>
    <string name="app_name">서베이지</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_english_yes">영어 설문에 참여합니다.</string>
    <string name="my_english_no">영어 설문에 참여하지 않습니다.</string>
    <string name="my_edit">수정하기</string>
    <string name="my_edit_done">수정 완료하기</string>
    <string name="push_yes">푸시 알림을 받습니다.</string>
    <string name="push_no">푸시 알림을 받지 않습니다.</string>
    <string-array name="tutorial_title">
        <item>설문 참여는 쉽게,\n보상은 확실하게</item>
        <item>푸쉬 알림으로\n빠르고 편한 설문 참여</item>
        <item>쌓인 금액은\n10일마다 정산</item>
        <item>Survey를 Easy하게,</item>
    </string-array>
    <string-array name="tutorial_content">
        <item>설문에 응답하면 현금이 쌓여요.\n최소 50원부터, 한번에 커피 한 잔 값까지!</item>
        <item>빠르게 마감되는 설문은\n알림 서비스로 알려드리기도 하니,\n놓치지 마세요!</item>
        <item>번거로운 포인트 제도 NO!\n성실하게 답변해주셨다면, 현금으로 바로 정산해드려요.</item>
        <item>저희는 설문 의뢰자와 응답자 모두\n편리하게 설문을 진행할 수 있는 플랫폼을 꿈꿔요.\n연구에 가치를 더하는 과정을 함께 해주세요!</item>
    </string-array>
    <string name="registerTerm2">
        <item>
            \n\n
            서베이지(이하 “회사”)는 「개인정보보호법」 관련 법령을 준수하고 있습니다. 회사는 개인정보처리방침을 통하여 이용자가 제공하는 개인정보가 어떠한 용도와 방식으로 이용되고 있으며, 개인정보보호를 위해 어떠한 조치가 취해지고 있는지 알려드립니다. 이용자가 제공한 모든 정보는 아래의 목적에 필요한 용도 이외로는 사용되지 않으며, 이용 목적이 변경될 시에는 이를 알리고 동의를 구할 것입니다.\n\n
            1. 처리하는 개인정보 항목\n\n
            회사는 견적 상담, 서비스 이용 등을 위해 아래와 같은 개인정보를 수집하며, 이용자는 개인정보의 수집을 거부할 수 있습니다.\n\n
            개인정보의 수집 항목\n\n
            a. 회원 가입\n
            - 필수 정보 : 이름, 이메일 주소, 휴대폰 번호, 생년월일\n
            b. 패널 가입\n
            - 필수 정보 : 이름, 성별, 생년월일, 이메일 주소, 휴대폰번호, 계좌정보\n
            c. 서비스 결제 및 정산처리\n
            - 필수 정보 : 이름, 휴대폰 번호, 이메일, 계좌번호, 신용카드정보\n
            d. 대학생 및 대학원생 할인\n
            - 필수 정보 : 학생증, 재학증명서, 포탈 학생정보 중 선택\n
            e. 이벤트 응모 및 경품 수령 과정에서 해당 서비스 이용자에 한해 추가 개인정보가 수집될 수 있습니다. 그런 경우 해당 수집 시점에서 ‘수집하는 개인정보 항목, 수집 및 이용목적, 개인정보 보관기간’에 대해 안내하고 동의를 받습니다.\n
            f. 서비스 이용과정에서 아래와 같은 정보들이 수집됩니다.\n
            -이용자의 브라우저 종류 및 OS, 방문 기록(IP Address, 접속시간), 쿠키\n
            수집 방법: 홈페이지 회원 가입 및 패널 가입\n\n
            2. 개인정보의 처리목적\n\n
            **회사는 수집한 개인정보를 다음의 목적으로만 이용하며,** 이용 목적이 변경될 시에는 사전 동의를 구할 것입니다.\n
            - 설문 견적 상담 및 의뢰 접수 \n
            - 요금 청구 및 결제, 정산 관리 \n
            - 대학생 및 대학원생 인증이벤트 응모 관리 \n
            - 패널 관리: 서비스 이용에 따른 본인 확인, 개인 식별, 불량패널의 부정 이용 방지, 가입 의사 확인, 연령 확인, 불만처리 등 민원처리, 고지사항 전달\n\n
            3. 개인정보의 처리 및 보유기간\n\n
            이용자의 개인정보는 수집 및 이용목적이 달성된 경우, 개인정보의 수집 및 이용에 대한 동의를 철회하는 경우에는 해당 정보를 지체 없이 파기합니다.단, 이용자의 별도의 동의를 받은 경우 또는 아래와 같이 법령에서 규정한 보존기간이 경과하지 않은 경우 약속한 기간 동안 개인정보를 보유합니다.\n\n
            a. 설문 견적 문의\n
            - 보존항목: 이름(또는 회사명), 연락처(휴대폰번호, 이메일주소, 카카오톡 아이디)\n
            - 보존기간: 수집일로부터 6개월\n
            b. 대금 결제에 관한 기록\n
            - 보존항목: 이름, 연락처, 결제정보\n
            - 보존근거: 전자상거래 등에서의 소비자보호에 관한 법률\n
            - 보존기간: 5년\n\n
            4. 개인정보의 제3자 제공회사는 이용자의 개인정보를 제3자에게 제공하지 않습니다.\n
            다만, 아래의 경우에는 예외로 합니다.\n\n
            - 이용자가 개별적으로 제3자 제공에 대하여 동의한 경우\n
            - 법령의 규정에 의거하거나, 수사 목적으로 법령에 정해진 절차와 방법에 따라 수사기관의 요구가 있는 경우\n\n

            5. 개인정보의 파기\n

            회사는 원칙적으로 개인정보 수집 및 이용목적이 달성된 후에는 해당 정보를 지체 없이 파기합니다. 파기절차 및 방법은 다음과 같습니다.\n\n

            a. 파기 절차\n

            - 이용자가 회원가입 등을 위해 입력한 정보는 목적이 달성된 후 별도의 DB로 옮겨져 내부 방침 및 기타 관련 법령에 의한 정보보호 사유에 따라(보유 및 이용기간 참조) 일정 기간 저장된 후 파기되어 집니다. 별도 DB로 옮겨진 개인정보는 법률에 의한 경우가 아니고서는 보유 되어지는 이외의 다른 목적으로 이용되지 않습니다.\n

            b. 파기방법\n

            - 전자적 파일형태로 저장된 개인정보는 기록을 재생할 수 없는 기술적 방법을 사용하여 삭제합니다.\n\n

            6. 이용자의 권리, 의무 및 그 행사방법\n\n

            이용자는 언제든지 정보 삭제 및 처리 정지를 요구할 수 있습니다. 정보 삭제를 원하시는 경우 회사 이메일(surveasy2019@yonsei.ac.kr) 로 문의주시면 조치하겠습니다. 또한, 회사는 만 14세 미만 아동의 법정대리인의 법령 상의 권리를 보장합니다. (아동의 개인정보에 대한 열람, 정정·삭제, 개인정보처리정지요구권)\n\n

            7. 기타\n\n

            개인정보 처리방침 내용 추가, 삭제 및 수정이 있을 시에는 변경사항의 시행일 7일 전부터 홈페이지를 통해 고지할 것입니다.
        </item>
    </string>
    <string name="MyViewSettingWithdraw_Title">회원 탈퇴</string>
    <string name="MyViewSettingWithdraw_NoticeTitle">탈퇴를 원하시면/n비밀번호를 입력해주세요.</string>
    <string name="MyViewSettingWithdraw_PwInput">비밀번호를 입력하세요</string>
    <string name="MyViewSettingWithdraw_WithdrawBtn">탈퇴하기</string>
    <string name="login_main1">에</string>
    <string name="login_main2">오신 것을 환영합니다.</string>
    <string name="login_id">아이디 (이메일)</string>
    <string name="login_pw">비밀번호</string>
    <string name="login_auto">자동 로그인</string>
    <string name="login_login_exist">로그인</string>
    <string name="login_find_pw"><![CDATA[비밀번호 찾기 >]]></string>
    <string name="btn_next">다음</string>
    <string name="fs_label">패널 기본 정보 조사</string>
    <string name="fs_warn">*보다 많은 설문조사를 전달해 드리기 위해 기초 정보 조사를 실시합니다.해당 응답 내용을 바탕으로 설문 대상이 분류되므로, 정확한 응답 부탁드립니다.</string>
    <string name="job_label">직업</string>
    <string name="english_label">영어 설문 참여 의사</string>
    <string name="participate_yes">참여합니다.</string>
    <string name="participate_no">참여하지 않습니다.</string>
    <string name="military_label">병역필여부</string>
    <string name="military_yes">군필</string>
    <string name="military_yet">미필</string>
    <string name="military_no">해당 없음</string>
</resources>