<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:id="@+id/ToolbarMyViewSettingWithdraw"
        android:theme="@style/ToolbarTheme"
        android:background="@color/white"
        app:titleTextColor="@color/black"/>

    <LinearLayout
        android:id="@+id/MyViewSettingWithdraw_TitleContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:padding="10dp">

        <TextView
            android:id="@+id/MyViewSettingWithdraw_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/MyViewSettingWithdraw_Title"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/MyViewSettingWithdraw_MainContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/MyViewSettingWithdraw_NoticeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="20dp"
            android:text="@string/MyViewSettingWithdraw_NoticeTitle" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="40dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/MyViewSettingWithdraw_PwInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:gravity="center"
                android:hint="@string/MyViewSettingWithdraw_PwInput" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/MyViewSettingWithdraw_WithdrawBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/white"
            android:text="@string/MyViewSettingWithdraw_WithdrawBtn"
            android:textColor="@color/black" />

    </LinearLayout>


</LinearLayout>