<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.surveasy.surveasy.presentation.register.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.register.ExistUserFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="40dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="기존 패널 로그인"
            android:id="@+id/tv_exist_title"
            app:layout_constraintTop_toTopOf="@id/guide_top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/TextHeaderBold"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="안내 문구 입니다.\n안내 문구 입니다.\n안내 문구 입니다.\n안내 문구 입니다."
            android:id="@+id/tv_exist_description"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@id/tv_exist_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/TextSmallRegular"
            android:textColor="@color/main_green"/>

        <EditText
            android:id="@+id/et_id_input"
            android:layout_width="0dp"
            android:layout_height="50sp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@id/et_pw_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingHorizontal="20sp"
            android:inputType="textEmailAddress"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:fontFamily="@font/main_font_m"
            android:hint="@string/login_id"
            android:textColorHint="#c9c9c9"
            android:background="@drawable/custom_input"
            android:textCursorDrawable="@drawable/custom_input_cursor" />

        <EditText
            android:id="@+id/et_pw_input"
            android:layout_width="0dp"
            android:layout_height="50sp"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/cb_auto_login"
            android:paddingHorizontal="20sp"
            android:inputType="textPassword"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:fontFamily="@font/main_font_m"
            android:hint="@string/login_pw"
            android:textColorHint="#c9c9c9"
            android:background="@drawable/custom_input"
            android:textCursorDrawable="@drawable/custom_input_cursor" />

        <CheckBox
            android:id="@+id/cb_auto_login"
            android:layout_width="wrap_content"
            app:layout_constraintVertical_chainStyle="packed"
            android:layout_height="40sp"
            android:layout_gravity="center"
            android:text="@string/login_auto"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toTopOf="@id/btn_exist"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="12sp"
            android:textColor="#707070"
            android:fontFamily="@font/main_font_m"
            android:checked="true" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_exist"
            android:layout_width="0dp"
            android:layout_height="45sp"
            android:background="@drawable/exist_login_button"
            app:layout_constraintBottom_toTopOf="@id/tv_find_pw"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/TextSmallBold"
            android:textColor="@color/white"
            android:text="@string/login_login_exist" />

        <TextView
            android:id="@+id/tv_find_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12sp"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@id/guide_bottom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/login_find_pw"
            android:fontFamily="@font/main_font_m" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>