<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="com.surveasy.surveasy.presentation.intro.RegisterEventType" />

        <variable
            name="vm"
            type="com.surveasy.surveasy.presentation.intro.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="60dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="30dp" />


        <ImageView
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintTop_toTopOf="@id/guide_top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_intro_text1"
            android:id="@+id/iv_logo"
            android:src="@drawable/surveasy_logo" />

        <TextView
            app:layout_constraintHorizontal_chainStyle="packed"
            android:id="@+id/tv_intro_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/iv_logo"
            app:layout_constraintBottom_toBottomOf="@id/iv_logo"
            app:layout_constraintStart_toEndOf="@id/iv_logo"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/login_main1"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:fontFamily="@font/main_font_b" />

        <TextView
            android:id="@+id/tv_intro_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/iv_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/login_main2"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:fontFamily="@font/main_font_b" />



        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_kakao"
            app:layout_constraintBottom_toTopOf="@id/btn_exist"
            android:layout_marginBottom="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:onClick="@{() -> vm.navigateRegisterPages(RegisterEventType.TO_AGREE)}"
            android:id="@+id/iv_kakao_login"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_exist"
            android:layout_width="0dp"
            android:layout_height="45sp"
            android:onClick="@{() -> vm.navigateRegisterPages(RegisterEventType.TO_EXIST_LOGIN)}"
            android:background="@drawable/exist_login_button"
            app:layout_constraintBottom_toBottomOf="@id/guide_bottom"
            app:layout_constraintStart_toStartOf="@id/iv_kakao_login"
            app:layout_constraintEnd_toEndOf="@id/iv_kakao_login"
            style="@style/TextSmallBold"
            android:textColor="@color/white"
            android:text="@string/login_login_exist" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>